# tuxedo

./: Cargo.toml  LICENSE  README.md  done.txt  lefthook.yml  mise.toml  todo.txt
.github/workflows/: ci.yml  release.yml
docs/: demo.tape
docs/themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  tokyonight-moon.toml
examples/: screenshots.rs
skills/tuxedo-cli/: SKILL.md
src/: action.rs  cli.rs  clipboard.rs  config.rs  config_watcher.rs  editor.rs  inbox.rs  lib.rs  main.rs  nl.rs  recurrence.rs  sample.rs  search.rs  theme.rs  threshold.rs  todo.rs  update.rs
src/app/: archive.rs  autocomplete.rs  bulk.rs  chord.rs  count.rs  draft.rs  draft_overlay.rs  external.rs  flash.rs  history.rs  mod.rs  mutations.rs  palette.rs  picker.rs  prefs.rs  selection.rs  test_support.rs  types.rs  visibility.rs
src/cmd/: mod.rs
src/core/: filter.rs  history.rs  mod.rs  mutations.rs  outcome.rs
src/serve/: assets.rs  mod.rs  net.rs  qr.rs
src/ui/: archive.rs  command_palette.rs  detail.rs  dialog.rs  empty.rs  filters.rs  header.rs  help.rs  list.rs  logo.rs  mod.rs  settings.rs  share.rs  status.rs  task_row.rs  today.rs
tests/: snapshots.rs
tests/snapshots/: snapshots__archive_view_styled.snap  snapshots__archive_view_text.snap  snapshots__archive_view_text.snap.new  snapshots__archive_wrap_on_styled.snap  snapshots__archive_wrap_on_text.snap  snapshots__command_palette_filtered_styled.snap  snapshots__command_palette_filtered_text.snap  snapshots__command_palette_preserves_visual_selection_styled.snap  (+47 more)
(+6 files in other folders)
